--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-auth": "5.0.0-beta.15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-twc": "^1.4.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
