--- a/package.json
+++ b/package.json
@@ -32,16 +32,19 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.28.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-auth": "5.0.0-beta.15",
+    "next-safe-action": "^6.2.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-query": "^3.39.3",
     "react-twc": "^1.4.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.2",
